@@ -71,6 +71,7 @@ export(hoslem_gof)
 export(icc)
 export(inequ_trend)
 export(is_singular)
+export(link_inverse)
 export(md)
 export(mean_n)
 export(mic)
@@ -203,6 +204,7 @@ importFrom(stats,fisher.test)
 importFrom(stats,fitted)
 importFrom(stats,formula)
 importFrom(stats,ftable)
+importFrom(stats,gaussian)
 importFrom(stats,glm)
 importFrom(stats,kruskal.test)
 importFrom(stats,lm)
