@@ -2,7 +2,9 @@ Version 0.11.3
 ------------------------------------------------------------------------------
 General:
 * Fixed examples, to resolve issues with CRAN package checks.
-* S3-generic `model.frame.lme()`.
+
+New functions:
+* `link_inverse()` to get the inverse link function from model objects.
 
 Version 0.11.2
 ------------------------------------------------------------------------------
